--- a/styles/style.css
+++ b/styles/style.css
@@ -105,3 +105,68 @@
 
 
 /* hero end */
+
+
+/* navbar start */
+
+#navbar{
+    background-color: rgba(var(--color4), 1);
+}
+
+.navbar-nav .nav-item{
+    font-weight: 500;
+}
+
+.navbar-nav .nav-item .nav-link{
+    position: relative;
+    z-index: 1;
+}
+
+.navbar-nav .nav-item .nav-link::before{
+    content: "";
+    width: 0;
+    height: 100%;
+    position: absolute;
+    bottom: 0%;
+    left: 0;
+    background-color: rgba(var(--color2),1);
+    z-index: -1;
+    transition: all 0.5s ease;
+}
+
+.navbar-nav .nav-item .nav-link:hover::before{
+    width: 100%;
+}
+
+.navbar-cta-button{
+    background-color:var(--bs-danger);
+    border: none;
+    padding: .5rem 2rem;
+    color: rgba(var(--color2), 1);
+    font-weight: bold;
+    position: relative;
+    transform: translateY(0px);
+    z-index: 1;
+    overflow: hidden;
+    transition: all 0.5s ease;
+}
+
+.navbar-cta-button::before {
+    content: "";
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    border-radius: 100%;
+    background-color: rgba(var(--color1), 1);
+    left: 50%;
+    top: 0;
+    z-index: -1;
+    transform: translate(-50%, 0) scale(0);
+    transition: all 0.5s ease;
+}
+
+.navbar-cta-button:hover::before {
+    transform: translate(-50%, 0) scale(1);
+}
+
+/* navbar end */
